crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI013_PYI013.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI013 [*] Non-empty class body must not contain `...`
 --> PYI013.pyi:5:5
  |
3 | class OneAttributeClass:
4 |     value: int
5 |     ...  # Error
  |     ^^^
6 |
7 | class OneAttributeClass2:
  |
help: Remove unnecessary `...`
  |
5 -     ...  # Error
5 +     # Error
  |

PYI013 [*] Non-empty class body must not contain `...`
 --> PYI013.pyi:8:5
  |
7 | class OneAttributeClass2:
8 |     ...  # Error
  |     ^^^
9 |     value: int
  |
help: Remove unnecessary `...`
  |
8 -     ...  # Error
8 +     # Error
  |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:12:5
   |
11 | class MyClass:
12 |     ...
   |     ^^^
13 |     value: int
   |
help: Remove unnecessary `...`
   |
12 -     ...
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:16:5
   |
15 | class TwoEllipsesClass:
16 |     ...
   |     ^^^
17 |     ...  # Error
   |
help: Remove unnecessary `...`
   |
16 -     ...
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:17:5
   |
15 | class TwoEllipsesClass:
16 |     ...
17 |     ...  # Error
   |     ^^^
18 |
19 | class DocstringClass:
   |
help: Remove unnecessary `...`
   |
17 -     ...  # Error
17 +     # Error
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:24:5
   |
22 |     """
23 |
24 |     ...  # Error
   |     ^^^
25 |
26 | class NonEmptyChild(Exception):
   |
help: Remove unnecessary `...`
   |
24 -     ...  # Error
24 +     # Error
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:28:5
   |
26 | class NonEmptyChild(Exception):
27 |     value: int
28 |     ...  # Error
   |     ^^^
29 |
30 | class NonEmptyChild2(Exception):
   |
help: Remove unnecessary `...`
   |
28 -     ...  # Error
28 +     # Error
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:31:5
   |
30 | class NonEmptyChild2(Exception):
31 |     ...  # Error
   |     ^^^
32 |     value: int
   |
help: Remove unnecessary `...`
   |
31 -     ...  # Error
31 +     # Error
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:36:5
   |
34 | class NonEmptyWithInit:
35 |     value: int
36 |     ...  # Error
   |     ^^^
37 |
38 |     def __init__():
   |
help: Remove unnecessary `...`
   |
36 -     ...  # Error
36 +     # Error
   |

PYI013 [*] Non-empty class body must not contain `...`
  --> PYI013.pyi:43:5
   |
41 | class NonEmptyChildWithInlineComment:
42 |     value: int
43 |     ... # preserve me
   |     ^^^
44 |
45 | # Not violations
   |
help: Remove unnecessary `...`
   |
43 -     ... # preserve me
43 +     # preserve me
   |
