crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI017_PYI017.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI017 Stubs should not contain assignments to attributes or multiple targets
 --> PYI017.pyi:4:1
  |
4 | b = c = int  # PYI017
  | ^^^^^^^^^^^
  |

PYI017 Stubs should not contain assignments to attributes or multiple targets
 --> PYI017.pyi:6:1
  |
6 | a.b = int  # PYI017
  | ^^^^^^^^^
  |

PYI017 Stubs should not contain assignments to attributes or multiple targets
 --> PYI017.pyi:8:1
  |
8 | d, e = int, str  # PYI017
  | ^^^^^^^^^^^^^^^
  |

PYI017 Stubs should not contain assignments to attributes or multiple targets
  --> PYI017.pyi:10:1
   |
10 | f, g, h = int, str, TypeVar("T")  # PYI017
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
