crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI018_PYI018.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI018 [*] Private TypeVar `_T` is never used
 --> PYI018.py:6:1
  |
4 | from typing_extensions import ParamSpec, TypeVarTuple
5 |
6 | _T = typing.TypeVar("_T")
  | ^^
7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
8 | _P = ParamSpec("_P")
  |
help: Remove unused private TypeVar `_T`
  |
6 - _T = typing.TypeVar("_T")
  |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private TypeVarTuple `_Ts` is never used
 --> PYI018.py:7:1
  |
6 | _T = typing.TypeVar("_T")
7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
  | ^^^
8 | _P = ParamSpec("_P")
9 | _P2 = typing.ParamSpec("_P2")
  |
help: Remove unused private TypeVarTuple `_Ts`
  |
7 - _Ts = typing_extensions.TypeVarTuple("_Ts")
  |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private ParamSpec `_P` is never used
  --> PYI018.py:8:1
   |
 6 | _T = typing.TypeVar("_T")
 7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
 8 | _P = ParamSpec("_P")
   | ^^
 9 | _P2 = typing.ParamSpec("_P2")
10 | _Ts2 = TypeVarTuple("_Ts2")
   |
help: Remove unused private ParamSpec `_P`
  |
8 - _P = ParamSpec("_P")
  |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private ParamSpec `_P2` is never used
  --> PYI018.py:9:1
   |
 7 | _Ts = typing_extensions.TypeVarTuple("_Ts")
 8 | _P = ParamSpec("_P")
 9 | _P2 = typing.ParamSpec("_P2")
   | ^^^
10 | _Ts2 = TypeVarTuple("_Ts2")
   |
help: Remove unused private ParamSpec `_P2`
   |
 9 - _P2 = typing.ParamSpec("_P2")
   |
note: This is an unsafe fix and may change runtime behavior

PYI018 [*] Private TypeVarTuple `_Ts2` is never used
  --> PYI018.py:10:1
   |
 8 | _P = ParamSpec("_P")
 9 | _P2 = typing.ParamSpec("_P2")
10 | _Ts2 = TypeVarTuple("_Ts2")
   | ^^^^
11 |
12 | # OK
   |
help: Remove unused private TypeVarTuple `_Ts2`
   |
10 - _Ts2 = TypeVarTuple("_Ts2")
   |
note: This is an unsafe fix and may change runtime behavior
