crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI019_PYI019_1.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI019 [*] Use `Self` instead of custom TypeVar `S`
 --> PYI019_1.pyi:4:10
  |
3 | class F:
4 |     def m[S](self: S) -> S: ...
  |          ^^^^^^^^^^^^^^^^^
help: Replace TypeVar `S` with `Self`
  |
1 ~ import typing
2 |
3 | class F:
4 ~     def m(self) -> typing.Self: ...
  |
