crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI024_PYI024.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI024 Use `typing.NamedTuple` instead of `collections.namedtuple`
 --> PYI024.pyi:3:9
  |
3 | person: collections.namedtuple  # Y024 Use "typing.NamedTuple" instead of "collections.namedtuple"
  |         ^^^^^^^^^^^^^^^^^^^^^^
  |
help: Replace with `typing.NamedTuple`

PYI024 Use `typing.NamedTuple` instead of `collections.namedtuple`
 --> PYI024.pyi:7:9
  |
7 | person: namedtuple  # Y024 Use "typing.NamedTuple" instead of "collections.namedtuple"
  |         ^^^^^^^^^^
  |
help: Replace with `typing.NamedTuple`

PYI024 Use `typing.NamedTuple` instead of `collections.namedtuple`
 --> PYI024.pyi:9:10
  |
9 | person = namedtuple(
  |          ^^^^^^^^^^
  |
help: Replace with `typing.NamedTuple`
